--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ body {
     display: flex;
     justify-self: center;
     padding-top: 5%;
+    padding-left: 40%;
 }
 
 .buttons {
@@ -91,7 +92,7 @@ body {
     }
 
     .img__one {
-        padding: auto;
+        padding: 20%;
         width: 30%;
         height: 30%
     }
