--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ body {
     }
 
     .img__one {
-        padding-left: auto;
+        padding-right: 20%;
         width: 30%;
         height: 30%
     }
